<resources>
    <string name="app_name">Instagram Repilca</string>
    <string name="profile_image_description">Profile Picture</string>
    <string name="profile_username_default">saviosajiperumpral</string>
    <string name="profile_posts_count_default">0</string>
    <string name="profile_posts_label">Posts</string>
    <string name="profile_followers_count_default">5M</string>
    <string name="profile_followers_label">Followers</string>
    <string name="profile_following_count_default">1</string>
    <string name="profile_following_label">Following</string>
    <string name="profile_bio_default">🇴🇲 | 🇮🇳\nbrilliantly besmirched</string>
    <string name="profile_edit_profile_button_text">Edit Profile</string>

    <string name="profile_tab_posts">Posts</string>
    <string name="profile_tab_reels">Reels</string>
    <string name="profile_tab_tagged">Tagged</string>
    <string name="app_logo_title">InstaKilogram Logo</string>
</resources>